docs: devices: a52q: update
Change-Id: I5f1f230f7cf89ba41837ba80fec0ba86dfa5b372

--- a/docs/devices/a52q.md
+++ b/docs/devices/a52q.md
@@ -13,7 +13,7 @@ parent: Supported devices
 - Maintainer: [@RisenID](https://github.com/RisenID)
 - Latest version: ![img](https://img.shields.io/github/v/release/BlackMesa123/UN1CA?filter=a52q*&style=flat-square&color=89bcff)
 - Install method: [Custom recovery]({% link guide/recovery.md %})
-- Requirements: **Android 14 bootloader**
+- Requirements: [**Android 14 bootloader**](https://github.com/Simon1511/a52q-a72q-fw/releases)
 
 ## Support links
 
