docs: devices: a71: burp
Change-Id: I56eba71ef4efa1618019213c367e0bed38624e57

--- a/docs/devices/a71.md
+++ b/docs/devices/a71.md
@@ -8,7 +8,7 @@ parent: Supported devices
   <img loading="lazy" src="/assets/images/a71.png"/>
 </p>
 
-# Galaxy A52 (a52q)
+# Galaxy A71 (a71)
 {: .pb-4 }
 - Maintainer: [@BlackMesa123](https://github.com/BlackMesa123)
 - Latest version: ![img](https://img.shields.io/github/v/release/BlackMesa123/UN1CA?filter=a71*&style=flat-square&color=89bcff)
