--- a/docs/devices/a72q.md
+++ b/docs/devices/a72q.md
@@ -1,23 +1,23 @@
 ---
 layout: default
-title: Galaxy A52
+title: Galaxy A72
 parent: Supported devices
 ---
 
 <p align="center">
-  <img loading="lazy" src="/assets/images/a52.png"/>
+  <img loading="lazy" src="/assets/images/a72.png"/>
 </p>
 
-# Galaxy A52 (a52q)
+# Galaxy A72 (a72q)
 {: .pb-4 }
 - Maintainer: [@RisenID](https://github.com/RisenID)
-- Latest version: ![img](https://img.shields.io/github/v/release/BlackMesa123/UN1CA?filter=a52q*&style=flat-square&color=89bcff)
+- Latest version: ![img](https://img.shields.io/github/v/release/BlackMesa123/UN1CA?filter=a72q*&style=flat-square&color=89bcff)
 - Install method: [Custom recovery]({% link guide/recovery.md %})
-- Requirements: [**Android 14 bootloader**](https://github.com/Simon1511/a52q-a72q-fw/releases/tag/A525FXXU6EWL3)
+- Requirements: [**Android 14 bootloader**](https://github.com/Simon1511/a52q-a72q-fw/releases/tag/A725FXXU6EWL4)
 
 ## Support links
 
-- [XDA Forums](https://xdaforums.com/f/samsung-galaxy-a52-4g.12131/)
+- [XDA Forums](https://xdaforums.com/f/samsung-galaxy-a72-4g.12141/)
 
 ## Device specifications
 
@@ -31,15 +31,15 @@ parent: Supported devices
 | Storage                       | 128GB / 256GB (UFS 2.1)                                                     |
 | SIM                           | Hybrid Dual SIM (Nano-SIM, dual stand-by)                                   |
 | MicroSD                       | Up to 1TB                                                                   |
-| Battery                       | 4500mAh Li-Po (non-removable), 25W fast charge                              |
-| Dimensions                    | 159.9 x 75.1 x 8.4 mm (6.30 x 2.96 x 0.33 in)                               |
-| Display                       | 6.5", 1080 x 2400 pixels, 20:9 ratio, Super AMOLED, 90Hz (~407 ppi density) |
+| Battery                       | 5000mAh Li-Ion (non-removable), 25W fast charge                             |
+| Dimensions                    | 165 x 77.4 x 8.4 mm (6.50 x 3.05 x 0.33 in)                                 |
+| Display                       | 6.7", 1080 x 2400 pixels, 20:9 ratio, Super AMOLED, 90Hz (~394 ppi density) |
 | Rear Camera 1 (IMX682/S5KGW1) | 64 MP, f/1.8, 26mm (wide), 1/1.7", 0.8µm, PDAF, OIS                         |
 | Rear Camera 2 (S5K3L6)        | 12 MP, f/2.2, 123˚ (ultrawide), 1.12µm                                      |
-| Rear Camera 3 (GC5035)        | 5 MP, f/2.4, (macro)                                                        |
+| Rear Camera 3 (HI847)         | 8 MP, f/2.4, (telephoto), 1.0µm, PDAF, OIS, 3x optical zoom                 |
 | Rear Camera 4 (GC5035)        | 5 MP, f/2.4, (depth)                                                        |
 | Front Camera (IMX616/S5KGD2)  | 32 MP, f/2.2, 26mm (wide), 1/2.8", 0.8µm                                    |
-| Fingerprint                   | Goodix GW9558 (under display, optical)                                      |
+| Fingerprint                   | EgisTec ET713 (under display, optical)                                      |
 | Sensors                       | Accelerometer, Gyro, Proximity (virtual), Compass, Hall IC, Grip            |
 | Extras                        | Dual speakers, NFC                                                          |
 
@@ -47,6 +47,6 @@ parent: Supported devices
 
 ```bash
 git clone --recurse-submodules https://github.com/BlackMesa123/UN1CA.git && cd UN1CA
-. ./buildenv.sh a52q
+. ./buildenv.sh a72q
 run_cmd make_rom
 ```
