a54x: config: move to flashable zip install format
Change-Id: I05ae8c7d3d613fc21ba2f66f513d0c433eef465e

--- a/docs/devices/a54x.md
+++ b/docs/devices/a54x.md
@@ -12,8 +12,8 @@ parent: Supported devices
 {: .pb-4 }
 - Maintainer: [@BlackMesa123](https://github.com/BlackMesa123)
 - Latest version: ![img](https://img.shields.io/github/v/release/BlackMesa123/UN1CA?filter=a54x*&style=flat-square&color=89bcff)
-- Install method: [Download mode]({% link guide/download.md %})
-- Requirements: [**Android 14 bootloader**](https://github.com/BlackMesa123/proprietary_vendor_samsung_a54x/releases)
+- Install method: [Custom recovery]({% link guide/recovery.md %})
+- Requirements: [**A546BXXS6BXA8**](https://github.com/BlackMesa123/proprietary_vendor_samsung_a54x/releases/tag/A546BXXS6BXA8_OXM)**/**[**A546EXXS6BXA7**](https://github.com/BlackMesa123/proprietary_vendor_samsung_a54x/releases/tag/A546EXXS6BXA7_OJM) **bootloader**
 
 ## Support links
 
